Code quality: Switched from using a constructor to 'valueOf'